--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  simple_mvvm:
+  breeze_mvvm:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
